[gd_scene load_steps=9 format=3 uid="uid://b6v6gkhh4seyc"]

[ext_resource type="Theme" uid="uid://ccjndvnjdmjjc" path="res://Template/DefaultThemes.tres" id="1_jmgim"]
[ext_resource type="Script" uid="uid://chf3ra0t5uu3o" path="res://Template/Scripts/textEditorWindow.gd" id="2_b8fav"]
[ext_resource type="FontFile" uid="uid://1mn4anwlt8yb" path="res://Template/Font/FreeSans.ttf" id="3_acy8r"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eck1n"]
bg_color = Color(0.6666667, 0, 1, 1)
expand_margin_top = 30.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wwxqh"]
bg_color = Color(0.31648767, 0.0006168437, 0.45319712, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_acy8r"]
bg_color = Color(0.16560963, 0.00017654359, 0.24680942, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jmgim"]
bg_color = Color(0.21876228, 0.011760027, 0.31702822, 1)

[sub_resource type="SyntaxHighlighter" id="SyntaxHighlighter_b8fav"]

[node name="textEditorWindow" type="Window"]
oversampling_override = 1.0
title = "Simple Text Editor"
position = Vector2i(0, 36)
size = Vector2i(1375, 795)
theme = ExtResource("1_jmgim")
theme_override_styles/embedded_border = SubResource("StyleBoxFlat_eck1n")
script = ExtResource("2_b8fav")

[node name="bg" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_wwxqh")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "File Name: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="fileNameSTR" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_styles/normal = SubResource("StyleBoxFlat_acy8r")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="saveButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_jmgim")
theme_override_fonts/font = ExtResource("3_acy8r")
text = " Save File "

[node name="OpenButton" type="Button" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_jmgim")
theme_override_fonts/font = ExtResource("3_acy8r")
text = " Open File "

[node name="pathInput" type="LineEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_acy8r")
placeholder_text = "Enter File Name"

[node name="HBoxContainer3" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="TextEditor" type="TextEdit" parent="HBoxContainer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_colors/selection_color = Color(0.28644332, 0.10475103, 0.426117, 1)
theme_override_colors/font_color = Color(0.71214944, 0.48793536, 0.92577165, 1)
theme_override_colors/font_readonly_color = Color(0.54509807, 0.25882354, 0.7764706, 1)
theme_override_colors/current_line_color = Color(0.2819284, 0.102573715, 0.41978082, 1)
theme_override_colors/word_highlighted_color = Color(0.6201953, 0.33932155, 0.85998225, 1)
theme_override_styles/normal = SubResource("StyleBoxFlat_jmgim")
theme_override_styles/focus = SubResource("StyleBoxFlat_jmgim")
backspace_deletes_composite_character_enabled = true
indent_wrapped_lines = true
minimap_draw = true
caret_blink = true
caret_move_on_right_click = false
syntax_highlighter = SubResource("SyntaxHighlighter_b8fav")
highlight_all_occurrences = true
highlight_current_line = true
draw_control_chars = true
draw_tabs = true
draw_spaces = true

[node name="Label2" type="Label" parent="HBoxContainer"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/saveButton" to="." method="_on_save_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/HBoxContainer2/OpenButton" to="." method="_on_open_button_pressed"]
